--- a/style.css
+++ b/style.css
@@ -1,100 +1,52 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
+@import url('https://fonts.googleapis.com/css?family=Overlock');
 
 * {
     box-sizing: border-box;
-  }
-  .container {
-    top: 0px;
-    bottom: 0px;
-    }
+}
+body {
+  background-color: #111;
+  margin: 0;
+  font-weight: bolder;
+}
+h1 {
+  text-transform: uppercase;
+}
 
-  body {
-    /* background-color: #111; */
-    margin: 0;
-    font-weight: bolder;
-  }
-  
-  .title {
-    font-family: "Montserrat";
-    text-align: center;
-    color: #FFF;
-    background-color: #111;
-    display: flex;
-    /* flex-direction: column;
-    align-items: center; */
-    justify-content: center;
-    /* height: 100vh; */
-    letter-spacing: 1px;
-    clear: left;
-    padding: 5px 37px;
-  }
-  
-  .text-effect {
-    background-image: url('https://media.giphy.com/media/26BROrSHlmyzzHf3i/giphy.gif');
-    background-size: cover;
-    color: transparent;
-     -moz-background-clip: text;
-     -webkit-background-clip: text;
-    font-size: 120px;
-    line-height: .75;
-    margin: 10px 0;
-  }
-  
-  h1 {
-    text-transform: uppercase;
-  }
-  
-  .text2-section {
-    font-size: 70px;
-    margin-bottom: 100px;
-    height: 80px;
-  }
-  
-  /* styling my button */
-  
-  .white-mode {
-    text-decoration: none;
-    padding: 7px 20px;
-    background-color: #122;
-    border-radius: 3px;
-    color: #FFF;
-    transition: .35s ease-in-out;
-    position: absolute;
-    left: 37px;
-    bottom: 50px;
-    font-family: "Montserrat";
-  }
-  
-  .white-mode:hover {
-    background-color: #FFF;
-    color: #122;
-  }
-  
-  .logo {
-    color: #fff;
-    padding: 15px 37px;
-    font-family: "Montserrat";
-    font-weight: bolder;
-    background-color: #111;
-    padding-bottom: 25px;
-  }
+/* ---------------- Header ---------------- */
+.img-menu:hover {
+  color: #DFBC3C;
+}
+.logo {
+  color: #fff;
+  padding: 15px 37px;
+  font-family: "Montserrat";
+  font-weight: bolder;
+  background-color: #111;
+  width: 100%;
+  height: 40px;
+}
 .logo2 {
-  width: 60px;
-  height: 30px;
+width: 50px;
+height: 50px;
+border-radius: 350px;
+float: left;
 }
-.icon {
- width: 30px;
- height: 30px;
- margin-bottom: 10px;
+.text4 {
+  float: left;
+  font-size: 15px;
+  letter-spacing: 3px;
+  margin-left: 20px;
 }
-
- /*Estilo para el input de la barra de navegacion de top team*/
-.menu-bar {
+ .menu-bar {
   display: none;
   height: 40px;
 }
-/*Estilo para el label de los inputs*/
+.menu-bar:checked ~ .menu-nav {
+  transform:  translateX(0%);
+}
+
 .icon-menu {
  width: 40px;
  height: 40px;
@@ -115,35 +67,10 @@
     height: 600px;
     top: 0;
 }
-
-.description-1 {
-  width: 50%;
-  text-align: justify;
-  font-size: 20px;
-}
-
-.menu-bar:checked ~ .menu-nav {
-  transform:  translateX(0%);
-}
-.modal-close:checked ~ .menu-nav {
-  display: none;
-}
-
-.alias {
- width: 95%;
- float: left;
-}
 .list {
   list-style: none;
   font-size: 18px;
 }
-.section {
-  padding: 25px 10px;
-}
-.top {
-  padding-top: 120px;
-}
-
 .modal-close {
   float: right;
     padding-right: 50px;
@@ -156,313 +83,559 @@
     font-size: 40px;
     font-family: 'Montserrat', sans-serif;
 }
-
+.modal-close:checked ~ .menu-nav {
+  display: none;
+}
+.section {
+  padding: 1px 10px;
+}
+.top {
+  padding-top: 120px;
+}
 .style-text{
   text-decoration: none;
   font-family: 'Montserrat', sans-serif;
   color: #FFF;
 }
+#title2:focus {
+  outline: none;
+}
+#title2 span {
+  vertical-align: middle;
+  line-height: 1.5em;
+  transition: font-size 2s cubic-bezier(0, 1, 0, 1);
+}
+#title2 span:hover {
+  font-size: 1.5em; /* This adds a hover effect */
+  line-height: 1em;
+  transition: font-size .2s cubic-bezier(0, 0.75, 0, 1);
+}
+#title2 span:active {
+  font-size: 1em;
+  text-shadow: none; /* Click to disable the 3D effect */
+}
+#title2 span::selection {
+  background-color: red; /* This hides the selection */
+}
 
-  /* .encabezado {
-    width: 100%;
-    height: 10%;
-    background: green;
-    padding: 0;
-    position: fixed;
-  } */
-  
-  /* Center website */
-  .main {
-    max-width: 1000px;
-    margin: auto;
-  }
-  .text {
-    width: 100%;
-    float: left;
-    margin-top: 80px;
-  }
-  .icons{ 
-    margin-top: 70px;
-    /* width: 3%; */
-    /* margin-right: 30px; */
-    /* margin-bottom: 10px; */
-    /* padding-right: 37px; */
-  }
-  
-  .slider {
-    width: 30%;
-    margin: auto;
-    overflow: hidden;
-    padding-top: 28px;
-  }
-   .slider ul {
-     padding: 0;
-     display: flex;
-     width: 400%;
+/* ---------------- Welcome ---------------- */
+.container {
+    top: 0px;
+    bottom: 0px;
+    background-color: white;
+}
+.title {
+    font-family: "Montserrat";
+    text-align: center;
+    color: #FFF;
+    background-color: #111;
+    display: flex;
+    justify-content: center;
+    letter-spacing: 1px;
+    clear: left;
+    padding: 5px 37px;
+    margin-top: 50px;
+}
+.hight {
+  height: 50px;
+}
+.font {
+  font-size: 14px;
+}
+.text-general {
+  font-family: "Montserrat";
+}
+.text {
+  width: 100%;
+  float: left;
+  margin-top: 80px;
+}
+.text-effect {
+  background-image: url('https://media.giphy.com/media/26BROrSHlmyzzHf3i/giphy.gif');
+  background-size: cover;
+  color: transparent;
+   -moz-background-clip: text;
+   -webkit-background-clip: text;
+  font-size: 120px;
+  line-height: .75;
+  margin: 10px 0;
+}
+.text2-section {
+  font-size: 70px;
+  height: 80px;
+}
+.text3 {
+  color: #DFBC3C;
+    letter-spacing: 3px
+}
+.icons{ 
+  margin-top: 70px;
+}
+.icon {
+  width: 30px;
+  height: 30px;
+  margin-bottom: 10px;
+ }
+ .white-mode {
+  text-decoration: none;
+  padding: 7px 20px;
+  background-color: #122;
+  border-radius: 3px;
+  color: #FFF;
+  transition: .35s ease-in-out;
+  font-family: "Montserrat";
+}
+.white-mode:hover {
+  background-color: #FFF;
+  color: #122;
+}
 
-     animation: cambio 20s infinite alternate;
-     
-   }
+/* ---------------- AboutMe ---------------- */
+.text-section {
+  font-size: 30px;
+  word-break: break-all;
+  text-align: center;
+  border-bottom: #452920 2px solid;
+  margin: 37px;
+}
+.padding {
+  padding: 30px 40px;
+ }
+ .description-1 {
+  width: 100%;
+  text-align: justify;
+  font-size: 20px;
+}
+.padding-left {
+  padding: 70px 100px;
+}
+.left{
+  left: 37px;
+  bottom: 80px;
+  position: absolute;
+}
+
+.slider {
+  width: 520px;
+  margin: auto;
+  overflow: hidden;
+}
+.slider ul {
+   padding: 0;
+   display: flex;
+   width: 400%;
+
+   animation: cambio 20s infinite alternate;
+   
+}
 .slider li {
-  list-style: none;
+list-style: none;
 }
 .img-slide{ 
-  /* background-image: url(img/foto.jpg); */
-    /* width: 30%; */
-    height: 300px;
-    width: 379px;
-  }
+  height: 300px;
+  width: 520px;
+}
+@keyframes cambio {
+  0% { margin-left: 0; } 
+  20% {  margin-left: 0; }
 
-  @keyframes cambio {
-    0% { margin-left: 0; } 
-    20% {  margin-left: 0; }
+  25% { margin-left: -100%; }
+  45% { margin-left: -100%; }
 
-    25% { margin-left: -100%; }
-    45% { margin-left: -100%; }
+  50% { margin-left: -200%; }
+  70% { margin-left: -200%; }
 
-    50% { margin-left: -200%; }
-    70% { margin-left: -200%; }
+  75% { margin-left: -300%; }
+  100% { margin-left: -300%; }
 
-    75% { margin-left: -300%; }
-    100% { margin-left: -300%; }
+}
 
-  }
+.float-3 {
+  float: right;
+}
 
-  .float-1 {
-    float: left;
-  }
-
-  .text-section {
-    font-size: 50px;
-    word-break: break-all;
-    text-align: center;
-    border-bottom: black 5px double;
-    /* border-bottom-color: black; */
-    /* border-style: groove; */
-    margin: 37px;
-  }
-  .padding-left {
-    padding: 95px 70px;
-    font-family: "Montserrat";
-    margin-left: 37px;
-  }
-
-  .padding {
-   padding: 30px 40px;
-   font-family: "Montserrat";
-  }
-
-  .text-general {
-    font-family: "Montserrat";
-  }
-
-  .float-2 {
-    float: right;
-  }
-
-  .float-3 {
-    float: right;
-  }
-
-  .margin {
-    margin-left: 110px;
-  }
-
-  .summary {
-    text-align: center;
-    font-size: 20px;
-    margin: 0px 37px;
-  }
-
-  .summary-2 {
-    text-align: justify;
-    height: 140px;
-    height: 35vh;
-  }
-  .title-proyect {
-    text-align: center;
-  }
-
-  .hight-1{
-    height: 500px;
-  }
-  
-  .row {
-    /* margin: 8px -16px; */
-  }
-  
-  /* Add padding BETWEEN each column (if you want) */
-  .row,
-  .row > .column {
+/* ---------------- Portafolio ---------------- */
+.row,
+.row > .column {
     padding: 8px 37px;
-  }
-  
-  /* Create four equal columns that floats next to each other */
-  .column {
-    float: left;
-    width: 25%;
-  }
-  
-  /* Clear floats after rows */ 
-  .row:after {
+}
+.row:after {
     content: "";
     display: table;
     clear: both;
-  }
-  
-  /* Content */
-  .content {
-    background-color: white;
-    padding: 10px;
-  }
-
-
-  /* portafolio */
-
-  html {
-    box-sizing: border-box;
-  }
-  
-  *, *:before, *:after {
-    box-sizing: inherit;
-  }
-  
-  .column {
-    float: left;
-    width: 33.3%;
-    margin-bottom: 16px;
-    padding: 0 8px;
-  }
-  
-  @media screen and (max-width: 650px) {
-    .column {
-      width: 100%;
-      display: block;
-    }
-  }
-  
-  .card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  }
-  
-  .container2 {
-    padding: 0 16px;
-  }
-  
-  .container2::after, .row::after {
-    content: "";
-    clear: both;
-    display: table;
-  }
-  
-  .title {
-    color: grey;
-  }
-  
-  .button {
-    border: none;
-    outline: 0;
-    display: inline-block;
-    padding: 8px;
-    color: white;
-    background-color: #000;
-    text-align: center;
-    cursor: pointer;
-    width: 100%;
-  }
-  
-  .button:hover {
-    background-color: #555;
-  }
-
-
-/* HABILIDADES */
-/* Center website */
-
-
-/* .text-2 {
-  font-size: 50px;
-  word-break: break-all;
-} */
-
-.myBtnContainer {
-  text-align: center;
-  margin-bottom: 50px;
-  margin-top: 30px;
 }
-
-/* Add padding BETWEEN each column */
-.row2 {
-  padding: 0px 40px;
+.container2::after, .row::after {
+  content: "";
+  clear: both;
+  display: table;
 }
-
-/* Create three equal columns that floats next to each other */
-.column2 {
+.column {
   float: left;
-  width: 20%;
+  width: 25%;
+}
+.column {
+  float: left;
+  width: 33.3%;
   margin-bottom: 16px;
   padding: 0 8px;
 }
+.padding-top {
+  padding-top: 20px;
+}
+.container2 {
+  padding: 0 16px;
+}
+.title-proyect {
+  text-align: center;
+}
+.hight-2 {
+  margin-top: 30px;
+}
+.content {
+  /* background-color: white; */
+  padding: 30px 10px;
+  background-color: rgba(223, 188, 60, 0.2);
+}
+.content2 {
+  /* background-color: white; */
+  padding: 30px 10px;
+  background-color: rgba(230, 182, 11, 0.4);
+}
+.content2:hover {
+  background-color: rgba(223, 188, 60, 0.2);
+}
 
-/* Clear floats after rows */ 
+.summary-2 {
+  text-align: justify;
+  height: 200px;;
+}
+.text-left {
+ text-align: left;
+ font-size: 15px;
+}
+.text-3{ 
+  font-size: 15px;
+}
+.button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #261712;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+}
+.button:hover {
+  background-color:#DFBC3C;
+  color: #111;
+}
+.summary {
+  text-align: center;
+  font-size: 15px;
+  margin: 40px 37px;
+}
+.colum-3 {
+  width: 20%;
+  display: inline-block;
+  margin-left: 37px;
+  margin-bottom: 20px;
+}
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+.center {
+  text-align: center;
+  background-color: #F6F6DC;
+}
+.center2 {
+  text-align: center;
+  text-decoration: none;
+  color: #fff;
+}
+.center2:hover {
+ color: #000000;
+}
+
+.text-2 {
+  font-size: 30px;
+  font-weight: bold;
+  color: #362019;
+}
+.height {
+  height: 400px;
+}
+/* ---------------- Skills ---------------- */
+.row2 {
+  padding: 0px 40px;
+}
 .row2:after {
   content: "";
   display: table;
   clear: both;
 }
-
-.nature {
-  text-align: center;
-  width: 10%;
-}
 .margin1 {
   margin: auto
 }
-/* Content */
-.content-text {
-  background-color: white;
-  padding: 10px;
+.myBtnContainer {
+  text-align: center;
+  margin-bottom: 50px;
+  margin-top: 30px;
 }
-
-.hight {
-  height: 50px;
-}
-
-/* The "show" class is added to the filtered elements */
-.show {
-  display: block;
-}
-
-/* Style the buttons */
 .btn {
   border: none;
   outline: none;
   padding: 12px 16px;
   background-color: white;
   cursor: pointer;
+  font-family: 'Montserrat', sans-serif;
 }
-
-.btn:hover {
-  background-color: #ddd;
-}
-
 .btn.active {
-  background-color: #666;
+  background-color: #DFBC3C;
   color: white;
 }
+.btn:hover {
+  background-color: rgba(223, 188, 60, 0.548);
+  color: #111111;
+}
+.column2 {
+  float: left;
+  width: 20%;
+  margin-bottom: 16px;
+  padding: 0 8px;
+}
+.nature {
+  text-align: center;
+  width: 20%;
+}
 
-  /* responsive */
-  
-  /* Responsive layout - makes a two column-layout instead of four columns */
-  @media screen and (max-width: 900px) {
-    .column {
+.editor {
+  text-align: center;
+  width: 20%;
+}
+
+.framework {
+  text-align: center;
+  width: 20%;
+}
+
+.style-text2{
+  text-decoration: none;
+  color: #111111;
+}
+
+
+/* ---------------- Contact ---------------- */
+.btn-cv {
+  width: 100px;
+  height: 35px;
+  margin: auto;
+  background-color: #DFBC3C;
+  padding: 7px 20px;
+  border-radius: 3px;
+  transition: .35s ease-in-out;
+  font-family: "Montserrat";
+}
+
+.btn-cv:hover {
+  background-color: rgba(223, 188, 60, 0.548);
+  color: #000000;
+}
+.contact {
+  width: 100%;
+  height: 100vh;
+}
+.footer {
+  margin-top: 410px;
+    color: white;
+    margin-left: 40px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 12px;
+}
+.quotes {
+  font-family: 'Overlock', cursive;
+ font-size: 30px;
+}
+.end{
+  background-color: #111;
+    color: #FFF;
+    height: 50px;
+    text-align: center;
+    font-size: 8px;
+    padding-top: 5px;
+    font-family: "Montserrat";
+}
+
+@media ( min-width: 1200px) and (max-width: 1500px) {
+  .img-slide {
+    height: 300px;
+    width: 500px;
+   }
+   .slider {
+  width: 500px;
+   }
+   .float-1 {
+    float: left;
+    margin-left: 30px;
+}
+  .description-1 {
+    width: 45%;
+  }
+  .space-left {
+    margin-left: 80px;
+   }
+   .height {
+    height: 400px;
+  }
+  .padding-left {
+    padding: 50px 60px;
+  }
+  .float-3 {
+    float: right;
+    margin-right: 50px;
+}
+}
+
+@media ( min-width: 950px) and (max-width: 1200px) {
+  .column {
       width: 50%;
-    }
+  }
+  .float-1 {
+    float: left;
+  }
+  .padding-left {
+    padding: 50px 60px;
+  }
+  .margin {
+    margin-left: 80px;
+  }
+  .img-slide {
+    height: 250px;
+    width: 400px;
+   }
+   .slider {
+  width: 400px;
+   }
+  .space-left {
+    margin-left: 50px;
+   }
+   .space-top {
+    margin-top: 50px;
+   }
+   .description-1 {
+    width: 50%;
   }
   
-  /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-  @media screen and (max-width: 600px) {
+}
+
+@media ( min-width: 850px) and (max-width: 950px) {
+  .column {
+    width: 100%;
+    display: block;
+  }
+  .float-1 {
+    float: left;
+  }
+  .padding-left {
+    padding: 70px 50px;
+ }
+ .img-slide {
+  height: 250px;
+  width: 350px;
+ }
+ .slider {
+width: 350px;
+ }
+.space-left {
+  margin-left: 50px;
+ }
+ .description-1 {
+  width: 50%;
+}
+}
+
+@media ( min-width: 750px) and (max-width: 850px) {
     .column {
       width: 100%;
+      display: block;
     }
+    .float-1 {
+      float: left;
+    }
+    .padding-left {
+      padding: 70px 50px;
+   }
+   .img-slide {
+    height: 250px;
+    width: 300px;
+   }
+   .slider {
+  width: 300px;
+   }
+  .space-left {
+    margin-left: 50px;
   }
+  .description-1 {
+    width: 50%;
+  }
+
+}
+@media ( min-width: 550px) and (max-width: 750px) {
+  .column {
+    width: 100%;
+}
+  .padding-left {
+    padding: 70px 50px;
+  }
+  .description-1 {
+    width: 100%;
+}
+ 
+@media ( min-width: 350px) and (max-width: 550px) {
+  .column {
+      width: 100%;
+  }
+  .left {
+    bottom: 50px;
+  }
+  .text-effect {
+    font-size: 80px;
+  }
+  .text2-section {
+    height: 150px;
+  }
+  .padding-left {
+    padding: 40px 30px;
+  }
+  .description-1 {
+    width: 100%;
+  }
+  .text-section {
+    font-size: 30px;
+  }
+  .slider {
+    width: 350px;
+  }
+  .img-slide {
+    width: 350px;
+  }
+  .padding-left {
+    padding: 70px 40px;
+}
+}
+
+@media ( min-width: 100px) and (max-width: 350px) {
+  .column {
+    width: 100%;
+}
+  .slider {
+    width: 320px;
+  }
+  .img-slide {
+    width: 320px;
+  }
+  .padding-left {
+    padding: 70px 50px;
+ }
+}
